@@ -1,3 +1,9 @@
+2005-02-17  Andy Wingo  <wingo@pobox.com>
+
+	* autogen-pkg.sh (GUILE_LIBS): Require g-wrap >= 1.9.4.
+	(DISABLE_DEPRECATED): Add a general option to disable deprecated
+	cflags.
+
 2005-01-12  Andy Wingo  <wingo@pobox.com>
 
 	* == Released platform version 2.7.98 ==
